init project mobile

--- a/AutoCare-Mobile/app.json
+++ b/AutoCare-Mobile/app.json
@@ -43,6 +43,11 @@
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
+    },
+    "splash": {
+      "image": "./assets/images/splash-icon.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#1976D2"
     }
   }
 }
